--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "@clerk/express": "^1.3.11",
     "@prisma/client": "^6.4.1",
     "@types/multer": "^1.4.12",
+    "@packages/common": "workspace:^",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "dynamoose": "^4.0.2",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pluralize": "^8.0.0",
@@ -35,6 +37,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.0",
     "@types/pluralize": "^0.0.33",
