--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -36,7 +36,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "uuid": "^11.1.0"
   },
   "nodemonConfig": {
     "watch": [
