--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -42,7 +42,6 @@
     "class-validator": "^0.14.1",
     "cron": "^4.1.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "express": "^4.21.2",
     "fast-safe-stringify": "^2.1.1",
@@ -59,6 +58,7 @@
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "xlsx": "^0.18.5",
@@ -90,6 +90,7 @@
     "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
     "drizzle-kit": "^0.30.5",
+    "drizzle-orm": "^0.39.3",
     "jest": "^29.7.0",
     "jest-mock-extended": "4.0.0-beta1",
     "nodemon": "^3.1.9",
