--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.687.0",
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@clerk/express": "^1.3.11",
+    "@packages/common": "workspace:^",
     "@prisma/client": "^6.4.1",
     "@types/multer": "^1.4.12",
-    "@packages/common": "workspace:^",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -34,6 +36,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.734.0",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
