--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,39 +1,37 @@
-# Use the AWS Lambda Node.js 20 base image
-FROM public.ecr.aws/lambda/nodejs:20 AS build
-
-# Set the working directory
+# 1. 빌드 환경
+FROM node:20-alpine AS builder
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# 2. 패키지 매니저 설정
+RUN npm install -g pnpm@10.4.1
 
-# Install dependencies (including dev dependencies for building)
-RUN npm install
+# 3. 종속성 설치 (캐시 활용)
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 
-# Copy the rest of your application's source code
+# 4. 소스 코드 복사 및 빌드
 COPY . .
+RUN pnpm build
 
-# Build TypeScript files
-RUN npm run build
+# 5. devDependencies 제거 (프로덕션 종속성만 유지)
+RUN pnpm prune --prod
 
-# Remove dev dependencies
-RUN npm prune --production
+# 6. 실행 환경 (초경량 Node.js)
+FROM node:20-alpine AS runtime
+WORKDIR /app
+RUN apk update && apk add curl
 
-# Use a second stage to prepare the production image
-FROM public.ecr.aws/lambda/nodejs:20
+# 7. 빌드된 결과만 복사 (node_modules 최소화)
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/pnpm-lock.yaml ./
+COPY --from=builder /app/node_modules ./node_modules
 
-# Set the working directory
-WORKDIR ${LAMBDA_TASK_ROOT}
+# 8. 불필요한 파일 제거
+RUN rm -rf /app/node_modules/.cache /app/.git /app/tmp /app/.npm
 
-# Copy built JavaScript files and node_modules from the build stage
-COPY --from=build /app/dist ${LAMBDA_TASK_ROOT}
-COPY --from=build /app/node_modules ${LAMBDA_TASK_ROOT}/node_modules
+# 9. 실행 포트 설정
+EXPOSE 8001
 
-# Copy package.json (optional)
-COPY --from=build /app/package*.json ${LAMBDA_TASK_ROOT}
-
-# Set environment variables (adjust as needed)
-ENV NODE_ENV=production
-
-# Command to start the Lambda function
-CMD ["index.handler"]
+# 10. 실행 명령어
+CMD ["node", "dist/index.js"]
