--- a/apps/client/.env.example
+++ b/apps/client/.env.example
@@ -3,5 +3,5 @@ NEXT_PUBLIC_LOCAL_URL=http://localhost:3000
 
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=YOUR-STRIPE-PUBLIC-KEY
 
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=YOUR-CLERK-PUBLISHABLE-KEY
-CLERK_SECRET_KEY=YOUR-CLERK-SECRET-KEY
+# NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=YOUR-CLERK-PUBLISHABLE-KEY
+# CLERK_SECRET_KEY=YOUR-CLERK-SECRET-KEY
