--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -7,5 +7,5 @@ CLOUDFRONT_DOMAIN=YOUR-CLOUDFRONT-DOMAIN
 
 STRIPE_SECRET_KEY=YOUR-STRIPE-SECRET-KEY
 
-CLERK_PUBLISHABLE_KEY=YOUR-CLERK-PUBLISHABLE-KEY
-CLERK_SECRET_KEY=YOUR-CLERK-SECRET-KEY
+# CLERK_PUBLISHABLE_KEY=YOUR-CLERK-PUBLISHABLE-KEY
+# CLERK_SECRET_KEY=YOUR-CLERK-SECRET-KEY
