--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && npx tsc && cpx \"src/seed/data/**/*\" dist/seed/data",
+    "postinstall": "prisma generate",
+    "build": "rimraf dist && prisma generate && npx tsc",
     "start": "npm run build && node dist/index.js",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
-    "seed": "ts-node src/seed/seedDynamodb.ts"
+    "db:init": "prisma migrate dev --name init"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,6 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@clerk/express": "^1.3.11",
-    "@packages/common": "workspace:^",
     "@prisma/client": "^6.4.1",
     "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
@@ -47,6 +47,7 @@
     "@types/uuid": "^10.0.0",
     "concurrently": "^9.1.0",
     "cpx": "^1.5.0",
+    "next": "15.0.3",
     "nodemon": "^3.1.7",
     "prisma": "^6.4.1",
     "rimraf": "^6.0.1",
