--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -6,7 +6,8 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "allowJs": true,
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "strict": false
   },
   "include": ["src/**/*.ts", "src/app.module.ts"],
   "exclude": ["node_modules", "test", "dist"]
