--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,72 +1,57 @@
 services:
-  nginx:
+  redis:
+    image: kix.ocir.io/axunckhvyv1v/lm-redis:latest
+    # image: redis:6.2-alpine
+    ports:
+      - '6379:6379'
+    networks:
+      - app-network
+
+  backend:
     build:
-      context: ./apps/nginx
+      context: ./apps/api
+      dockerfile: Dockerfile
+    image: kix.ocir.io/axunckhvyv1v/lm-backend:latest
     restart: always
     ports:
-      - '80:80'
-      - '443:443'
-    volumes:
-      - ./apps/nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
-      - ./apps/nginx/nginx.conf.template.ssl:/etc/nginx/nginx.conf.template.ssl:ro
-      - ./apps/nginx/entrypoint.sh:/entrypoint.sh:ro
-      - /home/ubuntu/.acme.sh:/root/.acme.sh:rw
-    networks:
-      - app-network
-    depends_on:
-      - backend-${ACTIVE}
-      - frontend-${ACTIVE}
-    environment:
-      - ACTIVE=${ACTIVE}
+      - '8001:8001'
     env_file:
-      - .env
-    entrypoint: ['/bin/sh', '/entrypoint.sh']
-
-  backend-green:
-    image: kix.ocir.io/axunckhvyv1v/lm-backend:green
-    restart: always
-    ports:
-      - '8003:8001'
-    env_file:
-      - ./apps/server/.env
+      - ./apps/api/.env
     volumes:
       - backend_data:/app/data
+      - /app/node_modules
     networks:
       - app-network
 
-  backend-blue:
-    image: kix.ocir.io/axunckhvyv1v/lm-backend:blue
+  auth:
+    build:
+      context: .
+      dockerfile: ./apps/auth/Dockerfile
+    image: kix.ocir.io/axunckhvyv1v/lm-auth:latest
     restart: always
     ports:
-      - '8002:8001'
+      - '4000:4000'
     env_file:
-      - ./apps/server/.env
+      - ./apps/auth/.env
     volumes:
-      - backend_data:/app/data
+      - auth_data:/app/data
+      - /app/node_modules
     networks:
       - app-network
 
-  frontend-green:
-    image: kix.ocir.io/axunckhvyv1v/lm-frontend:green
+  frontend:
+    build:
+      context: ./apps/client
+      dockerfile: Dockerfile
+    image: kix.ocir.io/axunckhvyv1v/lm-frontend:latest
     restart: always
     ports:
-      - '3003:3000'
+      - '3000:3000'
     env_file:
       - ./apps/client/.env
     volumes:
       - frontend_data:/app/data
-    networks:
-      - app-network
-
-  frontend-blue:
-    image: kix.ocir.io/axunckhvyv1v/lm-frontend:blue
-    restart: always
-    ports:
-      - '3002:3000'
-    env_file:
-      - ./apps/client/.env
-    volumes:
-      - frontend_data:/app/data
+      - /app/node_modules
     networks:
       - app-network
 
@@ -75,5 +60,6 @@ networks:
     driver: bridge
 
 volumes:
+  auth_data:
   backend_data:
   frontend_data:
