--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -32,7 +32,13 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: redis-storage
-          command: ["redis-server", "--appendonly", "yes"]
+          command: ["redis-server", "--appendonly", "yes", "--requirepass", "$(REDIS_PASSWORD)"]
+          env:
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: redis-secret
+                  key: redis-password
       volumes:
         - name: redis-storage
           persistentVolumeClaim:
