--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -6,8 +6,7 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: >-
-    eyJhdXRocyI6eyJraXgub2Npci5pbyI6eyJ1c2VybmFtZSI6ImF4dW5ja2h2eXYxdi9jb2RlbGFiIiwicGFzc3dvcmQiOiJde056e2VWLk41emxJVDAxdzFLaSJ9fX0=
-# GitHub Actions에서 Secrets로 관리 필요
+    {{ OCI_REGISTRY_AUTH_BASE64 }}
 ---
 apiVersion: v1
 kind: Secret
