--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: >-
-    {{ OCI_REGISTRY_AUTH_BASE64 }}
+    ${OCI_REGISTRY_AUTH_BASE64}
 ---
 apiVersion: v1
 kind: Secret
@@ -15,5 +15,5 @@ metadata:
   namespace: lm-app
 type: Opaque
 data:
-  DATABASE_URL: {{ BASE64_ENCODED_DB_URL }}
-  REDIS_PASSWORD: {{ BASE64_ENCODED_REDIS_PASSWORD }}
+  DATABASE_URL: ${BASE64_ENCODED_DB_URL}
+  REDIS_PASSWORD: ${BASE64_ENCODED_REDIS_PASSWORD}
