--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -16,9 +16,8 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: app-secrets
+  name: redis-secret
   namespace: lm-app
 type: Opaque
 data:
-  DATABASE_URL: ${BASE64_ENCODED_DB_URL}
   REDIS_PASSWORD: ${BASE64_ENCODED_REDIS_PASSWORD}
