--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -37,7 +37,7 @@ spec:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis-secrets
+                  name: redis-secret
                   key: REDIS_PASSWORD
       volumes:
         - name: redis-storage
