--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: redis-pvc
+  namespace: lm-app
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,6 +14,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: lm-app
   name: redis
 spec:
   replicas: 1
@@ -49,6 +51,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
+  namespace: lm-app
 spec:
   type: ClusterIP
   selector:
