--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -50,7 +50,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-service
+  name: redis
   namespace: lm-app
 spec:
   type: ClusterIP
