[CICD] docker-compose

--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "db:d": "pnpm db drop",
     "db:g": "pnpm db generate",
     "db:m": "pnpm db migrate",
-    "db:s": "pnpm db seed",
-    "db:p": "pnpm db push",
     "dev": "turbo run dev",
-    "docker": "pnpm --filter @packages/docker",
+    "docker:up": "docker-compose -f docker-compose.local.yaml --env-file ./.envs/.env.local up --build -d",
     "format": "prettier --write .",
     "lint": "turbo run lint",
     "deploy": "turbo run deploy",
