--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     # image: redis:6.2-alpine
     ports:
       - '6379:6379'
+    env_file:
+      - ./.envs/.env
     networks:
       - app-network
 
@@ -16,7 +18,7 @@ services:
     ports:
       - '8001:8001'
     env_file:
-      - ./apps/api/.env
+      - ./.envs/.env
     volumes:
       - backend_data:/app/data
       - /app/node_modules
@@ -32,7 +34,7 @@ services:
     ports:
       - '4000:4000'
     env_file:
-      - ./apps/auth/.env
+      - ./.envs/.env
     volumes:
       - auth_data:/app/data
       - /app/node_modules
@@ -48,7 +50,7 @@ services:
     ports:
       - '3000:3000'
     env_file:
-      - ./apps/client/.env
+      - ./.envs/.env
     volumes:
       - frontend_data:/app/data
       - /app/node_modules
