--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend
   namespace: lm-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: backend
@@ -34,7 +34,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: backend
   namespace: lm-app
 spec:
   type: ClusterIP
@@ -52,7 +52,7 @@ metadata:
   name: frontend
   namespace: lm-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: frontend
@@ -82,7 +82,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
   namespace: lm-app
 spec:
   type: ClusterIP
@@ -99,7 +99,7 @@ metadata:
   name: auth
   namespace: lm-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: auth
