--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   redis:
-    image: kix.ocir.io/axunckhvyv1v/lm-redis:latest
-    # image: redis:6.2-alpine
+    # image: kix.ocir.io/axunckhvyv1v/lm-redis:latest
+    image: redis:6.2-alpine
     ports:
       - '6379:6379'
     env_file:
