--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -12,12 +12,13 @@ type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: >-
     ${OCI_REGISTRY_AUTH_BASE64}
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: redis-secret
-  namespace: lm-app
-type: Opaque
-data:
-  REDIS_PASSWORD: ${BASE64_ENCODED_REDIS_PASSWORD}
+
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: redis-secret
+#   namespace: lm-app
+# type: Opaque
+# data:
+#   REDIS_PASSWORD: ${BASE64_ENCODED_REDIS_PASSWORD}
