--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -135,7 +135,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-service
+  name: auth
   namespace: lm-app
 spec:
   type: ClusterIP
