--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -39,6 +39,7 @@ services:
     env_file:
       - ./.envs/.env.local
     volumes:
+      - ./global-bundle.pem:/etc/ssl/certs/global-bundle.pem
       - backend_data:/app/data
       - /app/node_modules
     networks:
@@ -55,6 +56,7 @@ services:
     env_file:
       - ./.envs/.env.local
     volumes:
+      - ./global-bundle.pem:/etc/ssl/certs/global-bundle.pem
       - auth_data:/app/data
       - /app/node_modules
     networks:
