--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,62 +6,62 @@ on:
       - main
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+  # build-and-push:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: Log in to OCI Container Registry (OCIR)
-        run: |
-          echo "${{ secrets.OCI_AUTH_TOKEN }}" | docker login -u "${{ secrets.OCI_USERNAME }}" --password-stdin kix.ocir.io
+  #     - name: Log in to OCI Container Registry (OCIR)
+  #       run: |
+  #         echo "${{ secrets.OCI_AUTH_TOKEN }}" | docker login -u "${{ secrets.OCI_USERNAME }}" --password-stdin kix.ocir.io
 
-      - name: Build & Push Multi-Arch Images
-        run: |
-          IMAGE_PREFIX="kix.ocir.io/axunckhvyv1v/lm"
+  #     - name: Build & Push Multi-Arch Images
+  #       run: |
+  #         IMAGE_PREFIX="kix.ocir.io/axunckhvyv1v/lm"
 
-          declare -A SERVICES=(
-            ["redis"]="redis:6.2-alpine"
-            ["backend"]="apps/api"
-            ["auth"]="apps/auth"
-            ["frontend"]="apps/client"
-          )
+  #         declare -A SERVICES=(
+  #           ["redis"]="redis:6.2-alpine"
+  #           ["backend"]="apps/api"
+  #           ["auth"]="apps/auth"
+  #           ["frontend"]="apps/client"
+  #         )
 
-          for SERVICE in "${!SERVICES[@]}"; do
-            CONTEXT_PATH="${SERVICES[$SERVICE]}"
-            DOCKERFILE_PATH="$CONTEXT_PATH/Dockerfile"
+  #         for SERVICE in "${!SERVICES[@]}"; do
+  #           CONTEXT_PATH="${SERVICES[$SERVICE]}"
+  #           DOCKERFILE_PATH="$CONTEXT_PATH/Dockerfile"
 
-            if [[ $SERVICE == "redis" ]]; then
-              docker pull $CONTEXT_PATH || true
-              docker tag $CONTEXT_PATH $IMAGE_PREFIX-$SERVICE:latest
-              docker push $IMAGE_PREFIX-$SERVICE:latest
-            else
-              if [[ $SERVICE == "auth" ]]; then
-                CONTEXT_PATH="."
-              fi
-              docker buildx build \
-                --cache-from=type=local,src=/tmp/.buildx-cache \
-                --cache-to=type=local,dest=/tmp/.buildx-cache,mode=max \
-                --platform linux/arm64/v8 \
-                --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} \
-                --build-arg NEXT_PUBLIC_LOCAL_URL=${{ secrets.NEXT_PUBLIC_LOCAL_URL }} \
-                --build-arg NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }} \
-                --push \
-                -t $IMAGE_PREFIX-$SERVICE:latest \
-                -f $DOCKERFILE_PATH $CONTEXT_PATH
-            fi
-          done
+  #           if [[ $SERVICE == "redis" ]]; then
+  #             docker pull $CONTEXT_PATH || true
+  #             docker tag $CONTEXT_PATH $IMAGE_PREFIX-$SERVICE:latest
+  #             docker push $IMAGE_PREFIX-$SERVICE:latest
+  #           else
+  #             if [[ $SERVICE == "auth" ]]; then
+  #               CONTEXT_PATH="."
+  #             fi
+  #             docker buildx build \
+  #               --cache-from=type=local,src=/tmp/.buildx-cache \
+  #               --cache-to=type=local,dest=/tmp/.buildx-cache,mode=max \
+  #               --platform linux/arm64/v8 \
+  #               --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} \
+  #               --build-arg NEXT_PUBLIC_LOCAL_URL=${{ secrets.NEXT_PUBLIC_LOCAL_URL }} \
+  #               --build-arg NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }} \
+  #               --push \
+  #               -t $IMAGE_PREFIX-$SERVICE:latest \
+  #               -f $DOCKERFILE_PATH $CONTEXT_PATH
+  #           fi
+  #         done
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    # needs: build-and-push
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -87,6 +87,15 @@ jobs:
           kubectl delete secret app-secrets -n lm-app --ignore-not-found
           kubectl create secret generic app-secrets --from-env-file=.env -n lm-app
 
+      - name: Apply ConfigMap
+        run: |
+          kubectl apply -f k8s/configmap.yaml
+          kubectl get configmap -n lm-app
+
       - name: Deploy to OKE
         run: |
           bash k8s/deploy.sh
+
+      - name: Apply Ingress Configuration
+        run: |
+          kubectl apply -f k8s/ingress.yaml
