--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,8 +51,8 @@ jobs:
                 --cache-to=type=local,dest=/tmp/.buildx-cache,mode=max \
                 --platform linux/arm64/v8 \
                 --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} \
-                --build-arg NEXT_PUBLIC_DOMAIN_URL=${{ secrets.NEXT_PUBLIC_DOMAIN_URL }} \
                 --build-arg NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }} \
+                --build-arg NEXT_PUBLIC_URL=${{ secrets.NEXT_PUBLIC_URL }} \
                 --push \
                 -t $IMAGE_PREFIX-$SERVICE:latest \
                 -f $DOCKERFILE_PATH $CONTEXT_PATH
