--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "postinstall": "prisma generate",
     "build": "rimraf dist && prisma generate && npx tsc",
     "start": "npm run build && node dist/index.js",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
     "db:init": "prisma migrate dev --name init"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.687.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
-    "@clerk/express": "^1.3.11",
     "@prisma/client": "^6.4.1",
     "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
