--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -1,24 +1,20 @@
-FROM node:lts-alpine AS pruner
-
+FROM node:20-alpine AS pruner
 WORKDIR /app
 RUN npm install -g turbo
 COPY . .
 RUN turbo prune --scope=@apps/auth --docker
 
 
-
-FROM node:lts-alpine AS installer
-
+FROM node:20-alpine AS installer
 WORKDIR /app
 COPY --from=pruner /app/out/json .
 COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
 COPY --from=pruner /app/turbo.json ./turbo.json
 RUN npm install -g pnpm
-RUN pnpm install --frozen-lockfile
+RUN pnpm install --no-frozen-lockfile
 
 
-
-FROM node:lts-alpine AS builder
+FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=installer /app/ .
 COPY --from=pruner /app/out/full .
@@ -26,8 +22,7 @@ RUN npm install -g pnpm
 RUN pnpm run build
 
 
-
-FROM node:lts-alpine AS runner
+FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/ .
