--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,21 +1,21 @@
 services:
-  postgres:
-    image: postgres:16
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    ports:
-      - '5432:5432'
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
-      interval: 2s
-      timeout: 2s
-      retries: 20
-    volumes:
-      - /var/lib/postgresql/data
-    networks:
-      - app-network
+  # postgres:
+  #   image: postgres:16
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  #     POSTGRES_DB: postgres
+  #   ports:
+  #     - '5432:5432'
+  #   healthcheck:
+  #     test: ['CMD-SHELL', 'pg_isready -U postgres']
+  #     interval: 2s
+  #     timeout: 2s
+  #     retries: 20
+  #   volumes:
+  #     - /var/lib/postgresql/data
+  #   networks:
+  #     - app-network
 
   redis:
     # image: kix.ocir.io/axunckhvyv1v/lm-redis:latest
@@ -32,7 +32,7 @@ services:
     build:
       context: ./apps/api
       dockerfile: Dockerfile
-    # image: kix.ocir.io/axunckhvyv1v/lm-backend:latest
+    image: kix.ocir.io/axunckhvyv1v/lm-backend:latest
     restart: always
     ports:
       - '8001:8001'
@@ -49,7 +49,7 @@ services:
     build:
       context: .
       dockerfile: ./apps/auth/Dockerfile
-    # image: kix.ocir.io/axunckhvyv1v/lm-auth:latest
+    image: kix.ocir.io/axunckhvyv1v/lm-auth:latest
     restart: always
     ports:
       - '4000:4000'
@@ -68,9 +68,9 @@ services:
       dockerfile: Dockerfile
       args:
         NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
-        NEXT_PUBLIC_LOCAL_URL: ${NEXT_PUBLIC_LOCAL_URL}
+        NEXT_PUBLIC_URL: ${NEXT_PUBLIC_URL}
         NEXT_PUBLIC_STRIPE_PUBLIC_KEY: ${NEXT_PUBLIC_STRIPE_PUBLIC_KEY}
-    # image: kix.ocir.io/axunckhvyv1v/lm-frontend:latest
+    image: kix.ocir.io/axunckhvyv1v/lm-frontend:latest
     restart: always
     ports:
       - '3000:3000'
