[DEV] set up dev env

--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
   "type": "module",
   "packageManager": "pnpm@10.6.2",
   "devDependencies": {
+    "dotenv-cli": "^8.0.0",
     "prettier": "^3.5.3",
     "turbo": "^2.4.4",
     "typescript": "^5.8.2"
   },
   "scripts": {
+    "dev": "turbo run dev",
     "build": "turbo run build",
     "check-types": "turbo run check-types",
-    "db": "pnpm --filter @packages/common",
-    "db:d": "pnpm db drop",
-    "db:g": "pnpm db generate",
-    "db:m": "pnpm db migrate",
-    "dev": "turbo run dev",
-    "docker:up": "docker-compose -f docker-compose.local.yaml --env-file ./.envs/.env.local up --build -d",
+    "db": "pnpm --filter @apps/api",
+    "db:init": "pnpm db migrate",
+    "docker:up": "docker-compose -f docker-compose.local.yaml up -d",
     "format": "prettier --write .",
     "lint": "turbo run lint",
     "deploy": "turbo run deploy",
