--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
     "build": "rimraf dist && prisma generate && npx tsc",
     "start": "npm run build && node dist/index.js",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
-    "db:init": "prisma migrate dev --name init"
+    "migrate": "prisma migrate dev --name init"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
