--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,84 +1,84 @@
 services:
-  # postgres:
-  #   image: postgres:16
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: postgres
-  #     POSTGRES_DB: postgres
-  #   ports:
-  #     - '5432:5432'
-  #   healthcheck:
-  #     test: ['CMD-SHELL', 'pg_isready -U postgres']
-  #     interval: 2s
-  #     timeout: 2s
-  #     retries: 20
-  #   volumes:
-  #     - /var/lib/postgresql/data
-  #   networks:
-  #     - app-network
+  postgres:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - '5432:5432'
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 2s
+      timeout: 2s
+      retries: 20
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
   redis:
-    # image: kix.ocir.io/axunckhvyv1v/lm-redis:latest
     image: redis:6.2-alpine
     ports:
       - '6379:6379'
-    # environment:
-    #   REDIS_PASSWORD: my_secure_password
-    # command: redis-server --requirepass my_secure_password
+    volumes:
+      - redis_data:/data
     networks:
       - app-network
 
   backend:
-    build:
-      context: ./apps/api
-      dockerfile: Dockerfile
-    image: kix.ocir.io/axunckhvyv1v/lm-backend:latest
-    restart: always
+    image: node:20-alpine
+    working_dir: /app
     ports:
       - '8001:8001'
-    env_file:
-      - ./.envs/.env.local
     volumes:
       - ./global-bundle.pem:/etc/ssl/certs/global-bundle.pem
-      - backend_data:/app/data
+      - .:/app
       - /app/node_modules
+    command:
+      [
+        '/bin/sh',
+        '-c',
+        'npm install -g pnpm && pnpm install --filter=@apps/api --no-frozen-lockfile && pnpm run dev --filter=@apps/api',
+      ]
+    depends_on:
+      - postgres
     networks:
       - app-network
 
   auth:
-    build:
-      context: .
-      dockerfile: ./apps/auth/Dockerfile
-    image: kix.ocir.io/axunckhvyv1v/lm-auth:latest
-    restart: always
+    image: node:20-alpine
+    working_dir: /app
     ports:
       - '4000:4000'
-    env_file:
-      - ./.envs/.env.local
     volumes:
       - ./global-bundle.pem:/etc/ssl/certs/global-bundle.pem
-      - auth_data:/app/data
+      - .:/app
       - /app/node_modules
+    command:
+      ['/bin/sh', '-c', 'npm install -g pnpm && pnpm install --no-frozen-lockfile && pnpm run dev --filter=@apps/auth']
+    depends_on:
+      - postgres
     networks:
       - app-network
 
   frontend:
-    build:
-      context: ./apps/client
-      dockerfile: Dockerfile
-      args:
-        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
-        NEXT_PUBLIC_URL: ${NEXT_PUBLIC_URL}
-        NEXT_PUBLIC_STRIPE_PUBLIC_KEY: ${NEXT_PUBLIC_STRIPE_PUBLIC_KEY}
-    image: kix.ocir.io/axunckhvyv1v/lm-frontend:latest
-    restart: always
+    image: node:20-alpine
+    working_dir: /app
     ports:
       - '3000:3000'
-    env_file:
-      - ./.envs/.env.local
     volumes:
-      - frontend_data:/app/data
+      - .:/app
       - /app/node_modules
+    command: [
+        '/bin/sh',
+        '-c',
+        'npm install -g pnpm && pnpm install --filter=@apps/client --no-frozen-lockfile && pnpm run dev --filter=@apps/client',
+      ]
+    environment:
+      NEXT_PUBLIC_API_BASE_URL: '/api'
+      NEXT_PUBLIC_URL: 'http://localhost:3000'
+      NEXT_PUBLIC_STRIPE_PUBLIC_KEY: ${NEXT_PUBLIC_STRIPE_PUBLIC_KEY}
     networks:
       - app-network
 
@@ -87,6 +87,5 @@ networks:
     driver: bridge
 
 volumes:
-  auth_data:
-  backend_data:
-  frontend_data:
+  postgres_data:
+  redis_data:
