[FIX] token expire

--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -4,6 +4,8 @@ x-shared: &common-service
   volumes:
     - .:/app
     - /app/node_modules
+  environment:
+    - TZ=Asia/Seoul
   networks:
     - app-network
 
